2006-10-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/ContactsUI.js: added handling of
	notification of changes to contact selectors.

	* UI/WebServerResources/generic.js: added handling of notification
	of changes to contact selectors.

	* UI/Scheduler/UIxCalMainView.m ([UIxCalMainView
	-updateCalendarsAction]): proxy method to update the user
	preference table with the new selected calendar uids.

	* UI/Contacts/UIxContactsListView.m ([UIxContactsListView
	-calendarsContactsAction]): new method.

	* UI/Contacts/UIxContactSelector.m ([UIxContactSelector -setCheckedBoxes:boxes]) 
	([UIxContactSelector -setHasCheckBoxes:aBool]) 
	([UIxContactSelector -isCheckBoxChecked]): new accessors method to
	permit the drawing of checkboxes instead of card icons.

	* UI/Scheduler/UIxCalCalendarsListView.m: new component class that
	wrap a selector the the "Calendars" tab.

	* UI/Contacts/UIxContactsCalendarsSelection.m: buttons for the
	new user calendar selector.

2006-10-12  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Templates/SchedulerUI/UIxAppointmentEditor.wox: time ranges
	may cover hour 0 to hour 23.

	* UI/Scheduler/UIxAppointmentEditor.m ([UIxAppointmentEditor
	-iCalStringFromQueryParameter:format:]): dates explicitly set to
	utc tz.

	* UI/WebServerResources/SchedulerUI.js: manage both lists of
	objects wrt to the toolbar actions.

	* UI/WebServerResources/generic.js: added code to the "String"
	class to decode number-encoded char entities.

	* UI/Scheduler/UIxCalMainView.m ([UIxCalMainView
	-batchDeleteAction]): new method to delete selected entries in the
	lists.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -deleteEntriesWithIds:ids]): new method
	that delete identified entries in batch.

	* UI/SOGoUI/UIxComponent.m ([UIxComponent
	-jsCloseWithRefreshMethod:methodName]): new method with explicit purpose.

	* UI/Scheduler/UIxTaskEditor.m ([UIxTaskEditor -saveAction]),