@@ -1,5 +1,8 @@
 2006-10-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* UI/WebServerResources/SchedulerUI.js: added handling of multiple
+	calendars.
+
 	* UI/WebServerResources/ContactsUI.js: added handling of
 	notification of changes to contact selectors.
 
